fix overflow card

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -311,7 +311,6 @@
   .main_program_card {
     display: flex;
     flex-direction: column;
-    width: 250px;
     height: 100%;
     padding: 45px;
     align-items: center;
@@ -323,6 +322,9 @@
   }
 
   .main_program_card_title {
+    display:flex;
+    justify-content: center;
+    text-align: center;
     color: var(--clr-secondary);
     font-weight: var(--fw-bold);
     margin: 15px 0 15px 0;
